alignment fix

--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -84,7 +84,7 @@ h2 {
     color: white;
 }
 
-.color-scheme p {
+.color-scheme h3, p {
     text-align: center;
 }
 
